--- a/public/index.html
+++ b/public/index.html
@@ -9,13 +9,15 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <link rel="shortcut icon" type="image" href="./logo-page.png" />
     <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Abel&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Lora&family=Montserrat:wght@300;400&family=Raleway:wght@100;200;300&display=swap"
       rel="stylesheet"
     />
 
-    <title>React App</title>
+    <title>NetWatch</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
